2016-08-23  Ian Lance Taylor  <iant@golang.org>

	* gcc.target/s390/nolrl-1.c: Don't match the file name.

2016-08-23  Michael Meissner  <meissner@linux.vnet.ibm.com>

	* gcc.target/powerpc/vec-init-1.c: Add tests where the vector is
	being created from pointers to memory locations.
	* gcc.target/powerpc/vec-init-2.c: Likewise.

2016-08-23  Fritz Reese  <fritzoreese@gmail.com>

	* gfortran.dg/dec_structure_12.f90: New testcase.

2016-08-23  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc.target/s390/insv-1.c: Fix test when running with -m31.

2016-08-23  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc.target/s390/zvector/vec-genmask-1.c: Improve result
	verification.

2016-08-23  Dominik Vogt  <vogt@linux.vnet.ibm.com>

	* gcc.target/s390/md/andc-splitter-1.c: New test case.
	* gcc.target/s390/md/andc-splitter-2.c: Likewise.

2016-08-23  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/27336
	* c-c++-common/pr27336.c: New testcase.

2016-08-22  Marek Polacek  <polacek@redhat.com>

	PR c++/77321
	* g++.dg/cpp1y/pr77321.C: New test.

2016-08-22  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/60774
	* gfortran.dg/empty_label.f: Adjust test for new error message.
	* gfortran.dg/empty_label.f90: Ditto.
	* gfortran.dg/empty_label_typedecl.f90: Ditto.
	* gfortran.dg/label_3.f90: Deleted (redundant with empty_label.f90).
	* gfortran.dg/warnings_are_errors_1.f90: Remove invalid statement label.

2016-08-22  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/61318
	* gfortran.dg/pr61318.f90: New test.

2016-08-22  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/77260
	* gfortran.dg/pr77260_1.f90: New test.
	* gfortran.dg/pr77260_2.f90: Ditto.

2016-08-22  Joseph Myers  <joseph@codesourcery.com>

	PR middle-end/77269
	* gcc.dg/torture/builtin-isinf_sign-1.c: Use __builtin_signbit not
	__builtin_signbitf and __builtin_signbitl in expected generic
	expansion.
	* gcc.dg/torture/float128-tg-2.c, gcc.dg/torture/float128x-tg-2.c,